# pydf

./: .flake8  .gitignore  .isort.cfg  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
df/: blocks.py  data_pipeline_mixin.py  dataflow.py  dataflow_job_mixin.py  models.py  options.py
notebooks/: blocks_101.ipynb  data_pipelines_example.ipynb  dataflow_jobs_example.ipynb  test_sentence_embedding.ipynb
tests/: test_blocks.py  test_models.py
